<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.daniel.androidsearcher.MainActivity" >

   
    
    <item android:id="@+id/map_menu_item" android:title="@string/map_dwn_str"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_max_type" android:title="@string/max_type"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_min_type" android:title="@string/min_type"
        android:orderInCategory="100" android:showAsAction="never" />

    <item android:id="@+id/action_ave_type" android:title="@string/ave_type"
        android:orderInCategory="100" android:showAsAction="never" />
    
    <item android:id="@+id/send_to_server" android:title="@string/send_server_rssi" 
        android:orderInCategory="100" android:showAsAction="never"/>

</menu>
